k8s-manifests/database.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: devops-database
  namespace: devops
spec:
  serviceName: devops-database-service
  selector:
    matchLabels:
      app: postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
        namespace: devops
    spec:
      containers:
        - name: postgres
          image: postgres:13-alpine
          volumeMounts:
            - name: devops-database-data
              mountPath: /var/lib/postgresql/data
          ports:
            - containerPort: 5432
              name: postgres-port
      volumes:
        - name: devops-database-data
          persistentVolumeClaim:
            claimName: devops-database-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: devops-database-service
  namespace: devops
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
