k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-project-service
  namespace: devops
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
  selector:
    app: devops-project
